--- a/tests/test_unit.yaml
+++ b/tests/test_unit.yaml
@@ -116,7 +116,7 @@ example_data_mdx:
 
 test_mdx_object_builder_is_valid_format_true:
   -
-    dimensions: {"Versions": {"Base Plan": "TM1py Test Version"}}
+    cube_filter: {"Versions": {"Base Plan": "TM1py Test Version"}}
     cube_name: "Cost and FTE by Groups"
     expected_mdx:
       "SELECT\r\n
@@ -247,7 +247,7 @@ test_normalize_dataframe_match_dimensions_success:
 
 test_mdx_object_builder_create_dataframe_success:
   -
-    dimensions: {"Versions": {"Base Plan": "TM1py Test Version"}}
+    cube_filter: {"Versions": {"Base Plan": "TM1py Test Version"}}
     cube_name: "Cost and FTE by Groups"
 
 
@@ -279,3 +279,75 @@ test_dataframe_literal_remap_fail:
     dataframe: {}
     mapping: { "Versions": {"Base Plan":"TM1py Test Version"} }
     expected_dataframe: { "Versions": [ "TM1py Test Version" ] }
+
+test_dataframe_filter:
+  - dataframe: {
+      "Versions": [ "Base Plan", "Plan1", "Plan2" ],
+      "Orgunit": [ "ASD123", "ASD123", "XYZ123" ],
+      "Value": [ 1, 0, 1 ],
+    }
+    filter_condition: { "Orgunit": "ASD123" }
+    expected_dataframe: {
+      "Versions": [ "Base Plan", "Plan1" ],
+      "Orgunit": [ "ASD123", "ASD123" ],
+      "Value": [ 1, 0 ],
+    }
+
+test_dataframe_drop_column:
+  - dataframe: {
+      "Versions": [ "Base Plan", "Plan1", "Plan2" ],
+      "Orgunit": [ "ASD123", "ASD123", "XYZ123" ],
+      "Value": [ 1, 0, 1 ]
+    }
+    column_list: ["Orgunit"]
+    expected_dataframe: {
+      "Versions": [ "Base Plan", "Plan1", "Plan2" ],
+      "Value": [ 1, 0, 1 ]
+    }
+
+test_dataframe_redimension_scale_down:
+  - dataframe: {
+      "Versions": [ "Base Plan", "Plan1", "Plan2" ],
+      "Orgunit": [ "ASD123", "ASD123", "XYZ123" ],
+      "Value": [ 1, 0, 1 ]
+    }
+    filter_condition: { "Orgunit": "ASD123" }
+    expected_dataframe: {
+      "Versions": [ "Base Plan", "Plan1" ],
+      "Value": [ 1, 0]
+    }
+
+
+test_dataframe_relabel:
+  - dataframe: {
+      "Versions": [ "Base Plan", "Plan1", "Plan2" ],
+      "Orgunit": [ "ASD123", "ASD123", "XYZ123" ],
+      "Value": [ 1, 0, 1 ]
+    }
+    columns: { "Orgunit": "Orgunit2" }
+    expected_columns: ["Versions", "Orgunit2", "Value"]
+
+test_dataframe_add_column_assign_value:
+  - dataframe: {
+      "Versions": [ "Base Plan", "Plan1", "Plan2" ],
+      "Orgunit": [ "ASD123", "ASD123", "XYZ123" ],
+    }
+    column_values: { "Employee": "Alice" }
+    expected_dataframe: {
+      "Versions": [ "Base Plan", "Plan1", "Plan2" ],
+      "Orgunit": [ "ASD123", "ASD123", "XYZ123" ],
+      "Employee": ["Alice", "Alice", "Alice"],
+    }
+
+test_dataframe_redimension_and_transform:
+  - dataframe: {
+      "Versions": [ "Base Plan", "Plan1", "Plan2" ],
+      "Orgunit": [ "ASD123", "ASD123", "XYZ123" ],
+    }
+    source_dim_mapping: { "Orgunit": "ASD123" }
+    related_dimensions: { "Versions": "Base Versions" }
+    target_dim_mapping: { "Employee": "Alice" }
+    expected_dataframe: {
+      "Base Versions": [ "Base Plan", "Plan1"],
+      "Employee": ["Alice", "Alice"],
+    }
