add test cases to dataframe transform functions

--- a/tests/test_unit.yaml
+++ b/tests/test_unit.yaml
@@ -254,9 +254,13 @@ test_mdx_object_builder_create_dataframe_success:
 # Main: tests for dataframe remapping and copy functions
 test_dataframe_literal_remap_success:
   -
-    dataframe: { "Versions": ["Base Plan"]}
+    dataframe: { "Versions": ["Base Plan", "Plan1"]}
     mapping: { "Versions": {"Base Plan":"TM1py Test Version"} }
-    expected_dataframe: { "Versions": [ "TM1py Test Version" ] }
+    expected_dataframe: { "Versions": [ "TM1py Test Version", "Plan1" ] }
+  -
+    dataframe: { "Versions": ["Base Plan", "Plan1"]}
+    mapping: { "Versions": {"Base Plan":"TM1py Test Version", "Plan1": "Plan2"} }
+    expected_dataframe: { "Versions": [ "TM1py Test Version", "Plan2" ] }
 
 test_dataframe_literal_remap_fail:
   -
@@ -281,7 +285,8 @@ test_dataframe_literal_remap_fail:
     expected_dataframe: { "Versions": [ "TM1py Test Version" ] }
 
 test_dataframe_filter:
-  - dataframe: {
+  -
+    dataframe: {
       "Versions": [ "Base Plan", "Plan1", "Plan2" ],
       "Orgunit": [ "ASD123", "ASD123", "XYZ123" ],
       "Value": [ 1, 0, 1 ],
@@ -294,7 +299,8 @@ test_dataframe_filter:
     }
 
 test_dataframe_drop_column:
-  - dataframe: {
+  -
+    dataframe: {
       "Versions": [ "Base Plan", "Plan1", "Plan2" ],
       "Orgunit": [ "ASD123", "ASD123", "XYZ123" ],
       "Value": [ 1, 0, 1 ]
@@ -306,7 +312,8 @@ test_dataframe_drop_column:
     }
 
 test_dataframe_redimension_scale_down:
-  - dataframe: {
+  -
+    dataframe: {
       "Versions": [ "Base Plan", "Plan1", "Plan2" ],
       "Orgunit": [ "ASD123", "ASD123", "XYZ123" ],
       "Value": [ 1, 0, 1 ]
@@ -316,19 +323,41 @@ test_dataframe_redimension_scale_down:
       "Versions": [ "Base Plan", "Plan1" ],
       "Value": [ 1, 0]
     }
+  -
+    dataframe: {
+    "Versions": [ "Base Plan", "Plan1", "Plan2" ],
+    "Orgunit": [ "ASD123", "ASD123", "XYZ123" ],
+    "Value": [ 1, 0, 1 ]
+  }
+    filter_condition: { "Orgunit": "XYZ123" }
+    expected_dataframe: {
+      "Versions": [ "Plan2" ],
+      "Value": [ 1 ]
+    }
 
 
 test_dataframe_relabel:
-  - dataframe: {
+  -
+    dataframe: {
       "Versions": [ "Base Plan", "Plan1", "Plan2" ],
       "Orgunit": [ "ASD123", "ASD123", "XYZ123" ],
       "Value": [ 1, 0, 1 ]
     }
     columns: { "Orgunit": "Orgunit2" }
     expected_columns: ["Versions", "Orgunit2", "Value"]
+  -
+    dataframe: {
+    "Versions": [ "Base Plan", "Plan1", "Plan2" ],
+    "Orgunit": [ "ASD123", "ASD123", "XYZ123" ],
+    "Value": [ 1, 0, 1 ]
+  }
+    columns: { "Orgunit": "Orgunit2", "Versions": "Base Version" }
+    expected_columns: [ "Base Version", "Orgunit2", "Value" ]
+
 
 test_dataframe_add_column_assign_value:
-  - dataframe: {
+  -
+    dataframe: {
       "Versions": [ "Base Plan", "Plan1", "Plan2" ],
       "Orgunit": [ "ASD123", "ASD123", "XYZ123" ],
     }
@@ -340,14 +369,30 @@ test_dataframe_add_column_assign_value:
     }
 
 test_dataframe_redimension_and_transform:
-  - dataframe: {
+  -
+    dataframe: {
       "Versions": [ "Base Plan", "Plan1", "Plan2" ],
+      "Period": ["202401", "202402", "202402"],
       "Orgunit": [ "ASD123", "ASD123", "XYZ123" ],
     }
     source_dim_mapping: { "Orgunit": "ASD123" }
     related_dimensions: { "Versions": "Base Versions" }
     target_dim_mapping: { "Employee": "Alice" }
     expected_dataframe: {
-      "Base Versions": [ "Base Plan", "Plan1"],
+      "Base Versions": [ "Base Plan", "Plan1" ],
+      "Period": [ "202401", "202402" ],
       "Employee": ["Alice", "Alice"],
+    }
+  -
+    dataframe: {
+    "Versions": [ "Base Plan", "Plan1", "Plan2" ],
+    "Period": [ "202401", "202402", "202402" ],
+    "Orgunit": [ "ASD123", "ASD123", "XYZ123" ],
+  }
+    source_dim_mapping: { "Orgunit": "ASD123", "Period": "202402"}
+    related_dimensions: { "Versions": "Base Versions" }
+    target_dim_mapping: { "Employee": "Alice" }
+    expected_dataframe: {
+      "Base Versions": [ "Plan1" ],
+      "Employee": [ "Alice" ],
     }
