--- a/tests/test_unit.yaml
+++ b/tests/test_unit.yaml
@@ -397,7 +397,7 @@ test_dataframe_redimension_and_transform:
       "Employee": [ "Alice" ],
     }
 
-test_data_copy:
+test_data_copy_for_single_literal_remap:
   -
     base_data_mdx:
       "SELECT 
@@ -423,6 +423,7 @@ test_data_copy:
         }
       }
     ]
+    literal_mapping: { "Versions":{"Base Plan":"DataCopy Write Test" } }
     output_data_mdx:
       "SELECT 
              {[Periods].[Periods].[202301],[Periods].[Periods].[202302],[Periods].[Periods].[202303],[Periods].[Periods].[202304],[Periods].[Periods].[202305],[Periods].[Periods].[202306],[Periods].[Periods].[202307],[Periods].[Periods].[202308],[Periods].[Periods].[202309],[Periods].[Periods].[202310],[Periods].[Periods].[202311],[Periods].[Periods].[202312]} 
